tests/parsing/smtlib/v2.6/errors/146_function_dec_arg_list_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/146_function_dec_arg_list_unclosed_1.smt2", line 2, character 24-25:
2 | (define-funs-rec ((foo (_))))
                            ^
Error while parsing a function declaration, read the reserved word '_',
      but expected either a sort for the first argument type, or a closing
      parenthesis.
